
Changelog for pymta
===================

0.5dev
- Dropped dependency to repoze.workflow because the module added a lot of 
  dependencies recently (sixs others in total). The new, custom state machine
  also supports flags and conditions which suits SMTP very much.
- relaxed restrictions for the HELO/EHLO parameter (as real world clients don't
  send real host names)

0.4.0 (08.06.2009)
- Compatibility fixes for Python 2.3-2.6
- Policies can drop connection to the client before or after the response
- CommandParser is more robust against various socket errors
- Better infrastructure and documentation to use pymta in third-party tests


0.3.1 (27.02.2009)
 - Fixed bug which caused hang after unexpected connection drop by client


0.3 (15.02.2009)
 - Switch to process-based architecture, got rid of asyncore
 - Support for size-limitations of messages, huge messages will not be stored in
   memory if they will be rejected anyway (denial of service prevention)
 - API documentation is now auto-generated
 - Renamed DefaultMTAPolicy to IMTAPolicy and moved all interfaces to pymta.api
 - Added the debugging_server as an extremely simple example of a pymta-based 
   server


0.2.1 (19.12.2008)
 - wrote documentation
 - bug fixes
    - multiple messages in one SMTP transaction
    - transparency support for lines in the message starting with a dot


0.2 (16.12.2008)
 - initial release
