@@ -4,10 +4,13 @@ Changelog for pymta
 
 0.5dev
 - Dropped dependency to repoze.workflow because the module added a lot of 
-  dependencies recently (sixs others in total). The new, custom state machine
+  dependencies recently (six others in total). The new, custom state machine
   also supports flags and conditions which suits SMTP very much.
 - relaxed restrictions for the HELO/EHLO parameter (as real world clients don't
   send real host names)
+- Fixed bug - ESMTP session switched back to plain SMTP after the first mail 
+  was sent
+
 
 0.4.0 (08.06.2009)
 - Compatibility fixes for Python 2.3-2.6
